<resources>
    <string name="app_name">Anichan</string>
    <string name="explore_fragment">Explore</string>
    <string name="anime_list_fragment">Anime List</string>
    <string name="trending">Trending</string>
    <string name="anime_by_season">Anime By Season</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="movie_title">Movie Title</string>
    <string name="sort_by">Sort By:</string>
    <string name="popularity">Popularity</string>
    <string name="score">Rating</string>
    <string name="airing_status">Airing Status:</string>
    <string name="airing">Airing</string>
    <string name="finished">Finished</string>
    <string name="not_yet_aired">Not Yet Aired</string>
    <string name="type">Type:</string>
    <string name="tv">TV</string>
    <string name="ona">ONA</string>
    <string name="movie">Movie</string>
    <string name="ova">OVA</string>
    <string name="filter">Personalize</string>
    <string name="release_date">Release Date</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="searchAnime">Search Anime</string>
    <string name="no_results_found">No Results Found</string>
    <string-array name="Seasons">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
    </string-array>
    <string-array name="ExploreTabs">
        <item>Anime</item>
        <item>Manga</item>
        <item>Schedule</item>
    </string-array>
    <string-array name="ViewTabs">
        <item>Summary</item>
        <item>Characters</item>
        <item>Staff</item>
    </string-array>
    <string-array name="ViewCharacterTabs">
        <item>Voices</item>
        <item>Anime</item>
        <item>Manga</item>
    </string-array>
    <string-array name="ProfileTabs">
        <item>Stats</item>
        <item>Favorites</item>
        <item>Friends</item>
    </string-array>
    <string-array name="RankingTypes">
        <item>All</item>
        <item>Airing</item>
        <item>Upcoming</item>
        <item>TV</item>
        <item>OVA</item>
        <item>Movie</item>
        <item>Special</item>
        <item>By Popularity</item>
        <item>Favorite</item>
    </string-array>
    <string-array name="weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="MangaRankingTypes">
        <item>All</item>
        <item>Manga</item>
        <item>Novels</item>
        <item>OneShots</item>
        <item>Manhwa</item>
        <item>Manhua</item>
        <item>By Popularity</item>
        <item>Favorite</item>
    </string-array>
    <string-array name="MangaRankingTypes_NSFW">
        <item>All</item>
        <item>Manga</item>
        <item>Novels</item>
        <item>OneShots</item>
        <item>Doujin</item>
        <item>Manhwa</item>
        <item>Manhua</item>
        <item>By Popularity</item>
        <item>Favorite</item>
    </string-array>
    <string-array name="Statuses">
        <item>Watching</item>
        <item>Plan To Watch</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Dropped</item>
    </string-array>
    <string-array name="AnimeStatuses">
        <item>Watching</item>
        <item>Plan To Watch</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Dropped</item>
    </string-array>
    <string-array name="MangaStatuses">
        <item>Reading</item>
        <item>Plan To Read</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Dropped</item>
    </string-array>
    <string-array name="malMangaStatuses">
        <item>reading</item>
        <item>plan_to_read</item>
        <item>completed</item>
        <item>on_hold</item>
        <item>dropped</item>
    </string-array>
    <string-array name="mal_statuses">
        <item>watching</item>
        <item>plan_to_watch</item>
        <item>completed</item>
        <item>on_hold</item>
        <item>dropped</item>
    </string-array>
    <string-array name="Years">
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
        <item>1919</item>
        <item>1918</item>
        <item>1917</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alternate_titles">Alternate Titles</string>
    <string name="view_more">View More</string>
    <string name="opening_ending_themes">Opening/Ending Themes</string>
    <string name="related">Related</string>
    <string name="recommendations">Recommendations</string>
    <string name="currently_airing">Currently Airing</string>
    <string name="top_upcoming">Top Upcoming</string>
    <string name="recommendation">Recommendation</string>
    <string name="itemLayout">itemLayout</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="top_manhua">Top Manhua</string>
    <string name="top_manhwa">Top Manhwa</string>
    <string name="top_manga">Top Manga</string>
    <string name="manga_list">Manga List</string>
    <string name="people">People</string>
    <string name="characters">Characters</string>
    <string name="anime_statistics">Anime Statistics</string>
    <string name="manga_statistics">Manga Statistics</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="setting_list_description">Dark Mode, NSFW Filter</string>
    <string name="aboutApp">About App</string>
    <string name="aboutAppDescription">Information about app</string>
    <string name="rateAndReview">Rate And Review App</string>
    <string name="rateAndReviewDescription">Please rate and review this app on the play store.</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="sendFeedbackDescription">Send your feedback and suggestions</string>
    <string name="reportBug">Report A Bug</string>
    <string name="reportBugDescription">Report a bug or any issues</string>
    <string name="an_myanimelist_client">An MyAnimeList Client</string>
    <string name="developer">Developer</string>
    <string name="developerDescription">About Developer</string>
    <string name="librariesUsedDescription">List of libraries used</string>
    <string name="librariesUsed">Libraries used</string>
    <string name="changelog">Changelog</string>
    <string name="changelogDescription">Changelog of current version</string>
    <string name="share">Share</string>
    <string name="open_in_myanimelist">Open in MyAnimeList</string>
    <string name="copy_link">Copy link</string>
    <string name="login_message">Explore new Anime and Keep track of all your favorite anime in one place. \n \n Click on the login button to get started!</string>
    <string name="login_with_myanimelist">Login with MyAnimeList</string>
    <string name="developed_by">Developed By:</string>
    <string name="krishna_pandey">Krishna Pandey</string>
    <string name="message_by_developer">I appreciate your interest in my app and hope it has met your expectations. Thank you for your support and for giving me the opportunity to serve you. If you have any feedback or suggestions for improvement, I\'d love to hear from you. Thank you again for choosing my app. \nPlease don\'t forget to rate the app on the play store, I\'ll do my best to keep developing and improving this app 😊✌</string>
    <string name="developer_email">krishnaapps@gmail.com</string>
    <string name="e_mail">E-Mail:</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>